# Milestro

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Info.plist  LICENSE  build.gradle.kts  readme.md  settings.gradle.kts
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml  lint.yml  workflow-formal.yml
apps/: .gitignore
apps/cmd/: cli.cpp
apps/h2cs/: .gitattributes  build.gradle.kts  settings.gradle.kts
apps/unity-plugins/: Milestro.UnityPlugins.Format.csproj  Milestro.UnityPlugins.Format.slnx
apps/unity-plugins/Milestro/: Library.cs  Milestro.asmdef  MilestroBootstrap.cs
apps/unity-plugins/Milestro.Editor/: InputSystemCompatibilityValidator.cs  Milestro.Editor.asmdef  Tools.cs  csc.rsp
apps/unity-plugins/Milestro.Experimental/: Milestro.Experimental.asmdef
apps/unity-plugins/Milestro.InputSystem/: AssemblyInfo.cs  HybridInputSystemBootstrap.cs  Milestro.InputSystem.asmdef
apps/unity-plugins/Milestro.InputSystem.Tests/: HybridInputSystemProviderTests.cs  MacScrollPhaseProbeSessionTests.cs  Milestro.InputSystem.Tests.asmdef  ScrollPhaseAssociationTests.cs
apps/unity-plugins/Milestro.Tests/: FontFamilyParserTests.cs  HybridInputDispatcherTests.cs  HybridInputLegacyProviderTests.cs  HybridInputSystemCompatibilityTests.cs  InputSystemCompatibilityValidatorTests.cs  Milestro.Tests.asmdef  ScrollElasticTests.cs  TextBoxNoWrapHorizontalLayoutTests.cs  TextInputLifecycleFacadeTests.cs
cmake/: AddSwift.cmake  InitializeSwift.cmake  MilestroMacros.cmake
docs/: build.md  hybrid-input.md  inputbox-phase0-api-spike.md  limitations.md  release-symbols.md  unity.md
ext/: .gitignore
ext/PluginAPI/: CMakeLists.txt  IUnityPhysicsBackendSystem.h
ext/PluginAPI/PhysicsBackend/: PhysXCCCommandData.h  PhysXContactModificationCommandData.h  PhysXExtensionTypes.h  PhysXImmediateModeCommandData.h  PhysXPhysicsExtensionCommands.h  PhysXSceneCommandData.h  PhysXVehicleCommandData.h  PhysicsActorDescriptor.h  PhysicsArticulationCommandData.h  PhysicsBodyCommandData.h  PhysicsBodyTypes.h  PhysicsCommands.h  PhysicsCommonTypes.h  PhysicsEventTypes.h  PhysicsFilterData.h  PhysicsGeneralCommandData.h  PhysicsJointCommandData.h  PhysicsJointTypes.h  PhysicsMaterialCommandData.h  PhysicsPose.h  PhysicsQueryCommandData.h  (+6 more)
ext/icu-cmake/: CMakeLists.txt  make_data_cpp.py
ext/icu-cmake/cmake/: IcuSources.cmake
ext/skia-cmake/: CMakeLists.txt
ext/skia-unicode/: vendor-meta
gradle/: publish-helper.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
scripts/: milestro_symbols.py
src/game/: milestro_game_icu_icuucollator.cpp  milestro_game_ime.cpp  milestro_game_plugin_main.cpp  milestro_game_retcode.h  milestro_game_scroll_phase.cpp  milestro_game_skia_canvas.cpp  milestro_game_skia_font.cpp  milestro_game_skia_fontcollection.cpp  milestro_game_skia_fontfamilytokens.h  milestro_game_skia_fontmanager.cpp  milestro_game_skia_fontregistry.cpp  milestro_game_skia_image.cpp  milestro_game_skia_path.cpp  milestro_game_skia_slim_text.cpp  milestro_game_skia_svg.cpp  milestro_game_skia_textlayout_inputbox.cpp  milestro_game_skia_textlayout_paragraph.cpp  milestro_game_skia_textlayout_paragraphbuilder.cpp  milestro_game_skia_textlayout_paragraphstyle.cpp  milestro_game_skia_textlayout_strutstyle.cpp  milestro_game_skia_textlayout_textstyle.cpp  milestro_game_skia_typeface.cpp  milestro_game_skia_vertexdata.cpp  milestro_game_unicode_comparison.cpp  milestro_game_unicode_normalize.cpp  milestro_game_unicode_segments.cpp  milestro_game_unicode_transliterator.cpp  milestro_game_unicode_util.cpp  milestro_game_unity_render.cpp  milestro_game_unity_render.h  milestro_game_unity_render_metal.mm  milize_game_model.cpp
src/icu/: IcuUCCollator.cpp
src/ime/: ImeSession_ios.mm  ImeSession_macos.mm  ImeSession_unsupported.cpp  ImeSession_windows.cpp  ImeSession_windows_internal.h
src/input/: ScrollPhaseGestureTracker.cpp  ScrollPhaseGestureTracker.h  ScrollPhaseLease.cpp  ScrollPhaseLease.h  ScrollPhaseMinimalGestureTracker.cpp  ScrollPhaseMinimalGestureTracker.h  ScrollPhaseMinimalInvalidDetailLatch.h  ScrollPhaseMinimalPollQueue.h  ScrollPhaseMinimalQueueAdmission.h  ScrollPhaseMonitorModePublication.h  ScrollPhaseMonitor_macos.mm  ScrollPhaseMonitor_unsupported.cpp  ScrollPhaseUnloadPolicy.cpp
src/io/: milestro_io.cpp
src/log/: log.cpp  log_unitylog.cpp
src/skia/: Canvas.cpp  Canvas.h  Font.cpp  FontFamilyKeywordMap.cpp  FontManager.cpp  FontManager.h  FontRegistry.cpp  Image.cpp  MilestroEmptyFontManager.cpp  MilestroFontManager.cpp  MilestroFontManager.h  MilestroRegisteredFontMgr.cpp  Path.cpp  Svg.cpp  TypeFace.cpp  TypeFace.h  Typeface.cpp  Unicode.cpp  Unicode.h  VertexData.cpp
src/unicode/: comparison.cpp  icu.cpp  normalize.cpp  segments.cpp  transliterator.cpp  util.cpp
src/unity_render/: MilestroUnityGraphicsBackend.h  MilestroUnityRenderD3D12Backend.cpp  MilestroUnityRenderD3D12Backend.h  MilestroUnityRenderDispatcher.cpp  MilestroUnityRenderDispatcher.h  MilestroUnityRenderGLBackend.cpp  MilestroUnityRenderGLBackend.h  MilestroUnityRenderLog.h  MilestroUnityRenderMetalBackend.h  MilestroUnityRenderMetalBackend.mm  MilestroUnityRenderPayloadDraw.cpp  MilestroUnityRenderPayloadDraw.h  MilestroUnityRenderSubmission.h  MilestroUnityRenderSubmissionDraw.cpp  MilestroUnityRenderSubmissionDraw.h  MilestroUnityRenderTargetPayload.h  MilestroUnityRenderTextureHandleKind.h  MilestroUnityRenderVulkanBackend.cpp  MilestroUnityRenderVulkanBackend.h
tests/: CMakeLists.txt
tests/icu/: CMakeLists.txt
tests/image/: CMakeLists.txt
tests/ime/: CMakeLists.txt
tests/ime/src/: test_ime_session_windows.cpp
tests/input/: CMakeLists.txt
tests/input/src/: test_scroll_phase.cpp
tests/inputbox/: CMakeLists.txt
tests/inputbox/src/: test_inputbox.cpp  test_inputbox_api_spike.cpp
tests/readfont/: CMakeLists.txt
tests/readfont/src/: test_readfont.cpp
tests/skia/: CMakeLists.txt
tests/skia/src/: test_font_collection.cpp  test_paragraph_style.cpp  test_unicode_fallback.cpp
(+315 files in other folders)
